Moved the delete button to editProfile screen, replaced some querries with DAO class methods. Added a method to update users description and to get a user from the database.

--- a/IzvorniKod/GuildBuildApp/app/src/main/res/values/strings.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">GuildBuild</string>
+    <string name="send_message">Send message</string>
+    <string name="list_of_guilds">List of Guilds</string>
+    <string name="profile">Profile</string>
+    <string name="my_guild">My guild</string>
 </resources>
