Removed some hardcoded querries, added the option to add a guild, changed the way user is changing his/hers description, added some activities...

--- a/IzvorniKod/GuildBuildApp/app/src/main/res/values/strings.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="list_of_guilds">List of Guilds</string>
     <string name="profile">Profile</string>
     <string name="my_guild">My guild</string>
+    <string name="create_guild">Create guild</string>
 </resources>
