Fixed ConcedeActivity, added finish(); to FormApplicationActivity so it doesn't show up when activities are removed from the Activity stack. Added button for seeing user requests to join a Guild. It is GONE if the current user is only a member.

--- a/IzvorniKod/GuildBuildApp/app/src/main/res/values/strings.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="members">Members</string>
     <string name="give_up_leadership">Give up leadership</string>
     <string name="promote_demote_members">Promote/Demote members</string>
+    <string name="user_requests">User requests</string>
 
 </resources>
