--- a/IzvorniKod/GuildBuildApp/app/src/main/res/values/strings.xml
+++ b/IzvorniKod/GuildBuildApp/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="send_message">Send message</string>
     <string name="list_of_guilds">List of Guilds</string>
     <string name="profile">Profile</string>
-    <string name="my_guild">My guild</string>
+    <string name="my_guild">My guilds</string>
     <string name="create_guild">Create guild</string>
     <string name="edit_profile">Edit profile</string>
     <string name="change_avatar">Change avatar</string>
